# AION

./: .gitignore  README.md  aion_cli.py  config.py  debugger.py  formatter.py  main.py  notebook.py  project_ideas.db  repl.py  requirements.txt  runner.py  setup.cfg  setup.py  website.html
ai/: __init__.py  agents_module.py  ai_module.py
aion-vscode/: README.md  aion-language-1.0.0.vsix  extension.js  language-configuration.json  package.json
aion_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/: __init__.py  commands.py  deploy.py  error_display.py  marketplace_cmd.py  package_manager.py
compiler/: __init__.py  bytecode.py  compiler.py  vm.py
database/: __init__.py  connection.py  db_module.py  query.py
deploy/: __init__.py  exporter.py  packager.py  publisher.py
examples/: agents_demo.aion  ai_demo.aion  db_demo.aion  error_test1.aion  error_test2.aion  error_test3.aion  for_test.aion  greetings.aion  hello.aion  image_test.aion  memory_test.aion  multi_file_demo.aion  my_app.html  myapp.db  project_ideas.aion  showcase.aion  stream_test.aion  try_test.aion  ui_demo.aion  utils.aion  web_demo.aion
interpreter/: __init__.py  environment.py  interpreter.py
lexer/: __init__.py  lexer.py  token.py  token_types.py
marketplace/: __init__.py  marketplace.py  marketplace_registry.json  registry.py  search.py
myproject/: README.md  aion.json
parser/: __init__.py  nodes.py  parser.py
runtime/: __init__.py
stdlib/: __init__.py  collections_module.py  datetime_module.py  files_module.py  math_module.py  text_module.py
(+32 files in other folders)
