[metadata]
name = aion-lang
version = 1.0.0
author = Emmanuel King Christopher
author_email = emmanuelkingchristopher@gmail.com
description = AION - AI-Native Programming Language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kinghenesey/AION
project_urls =
    Bug Tracker = https://github.com/kinghenesey/AION/issues
    Documentation = https://github.com/kinghenesey/AION#readme
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
keywords = programming language, ai, interpreter, compiler

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
package_dir = =.

[options.packages.find]
where = .
exclude =
    venv*
    tests*
    dist*
    build*
    *.egg-info

[options.entry_points]
console_scripts =
    aion = aion_cli:main